ec2/task.tf
provider "aws" {
  region = "ap-southeast-2"
}
resource "aws_vpc" "aws_vpc" {
  cidr_block = "10.10.0.0/16"
  tags = {
    Name = "aws_vpc"
  }
}
resource "aws_subnet" "subnet" {
  cidr_block = "10.10.1.0/24"
  vpc_id     = aws_vpc.aws_vpc.id
  tags = {
    Name = "subnet"
  }
  depends_on = [
    aws_vpc.aws_vpc
  ]
}
resource "aws_security_group" "aws_asg" {
  name        = "security-group"
  description = "Allow TLS inbound traffic"
  vpc_id      = aws_vpc.aws_vpc.id
  ingress {
    description = "tcp from vpc"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.aws_vpc.cidr_block]
  }
  tags = {
    Name = "sgroup"
  }
}
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.aws_vpc.id

  tags = {
    Name = "main"
  }
}
resource "aws_eip" "eip" {
  vpc = true
  instance = aws_instance.my_first_instance.id
  depends_on = [
    aws_instance.my_first_instance
  ]
}
resource "aws_instance" "my_first_instance"{
  ami                    = "ami-09a5c873bc79530d9"
  instance_type          = "t2.micro"
  key_name               = "jenkins-task"
  subnet_id = aws_subnet.subnet.id
  security_groups         = [aws_security_group.aws_asg.id]
  
  tags = {
 Name = "ec2_instance"
  }
  provisioner "remote-exec" {
  connection {
    host = aws_eip.eip.address
    type = "ssh"
    user = "ubuntu"
    password = "-----BEGIN OPENSSH PRIVATE KEY-----b3BlbnNzaC1rZXktdjEAAAAABG5vbmUAAAAEbm9uZQAAAAAAAAABAAABlwAAAAdzc2gtcnNhAAAAAwEAAQAAAYEAu+Qs6wBqzHZkmMtbfJSw0KOzZtHcEVH3cqZBbFb+A/4BSS6UPCA+EYnX9sMra+Ay2zV8lxFQpVkRROV2c5vKEI2MhX1H0TliVs/SX3xmXjYpOXC4/TRhAaipF6BqiTrAznpCoQrfAYqXQTmM8tVmXdiXKWbjuHpo9cRXhHH2aikqMQ3W2GekJWQGAZrO98I/tI3vxuJfG1hB8R1XoV18EyT9ahnCaNB9U0hYxQeEIMZJ+LmHCwgXfFaOp+IwWduNWrba7bvlbK81xsADF6qiuP14prnPQzT1K8dl7qpvuqigpROelTJY3OmLTJOM9vw/B+8unU2d2sax1LHcPJeebbymLue78ucHFZyfAhViM [...]
  }
  }
}
